--- a/core/templates/core/snippets/pwa_promotion/edge_menu.html
+++ b/core/templates/core/snippets/pwa_promotion/edge_menu.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-xs-9">
         {% if user.is_authenticated %}
-            <strong>{% blocktrans %}Hey {{ user }} !{% endblocktrans %}</strong><br>
+            <strong>{% blocktrans %}Hey {{ user.first_name }} !{% endblocktrans %}</strong><br>
         {% else %}
             <strong>{{ service.project_name }}</strong><br>
         {% endif %}
