--- a/static/ikwen/css/admin-home.css
+++ b/static/ikwen/css/admin-home.css
@@ -22,20 +22,22 @@ form.set-domain-name .form-group {margin-right: 15px}
 
 .welcome-subtitle { color: #5a5a5a; }
 
+.pending-invoice .btn {background: #fff; color: #007BFF}
+
 
 /* Media query */
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
     .row-card-section { display: block !important; text-align: center !important; }
-
     .section-about {font-size: 4.6vw;padding: 3vh 0;text-align: left !important;}
-
     .welcome-subtitle { font-size: 4.5vw; }
+    .pending-invoice .about {margin-bottom: 20px}
 }
 
 @media only screen and (min-width: 768px) {
     form.set-domain-name input.form-control {width: 284px;}
+    .pending-invoice .about {line-height: 45px}
 }
 
 @media(min-width: 992px) {
@@ -48,7 +50,7 @@ form.set-domain-name .form-group {margin-right: 15px}
 }
 
 /* Landscape */
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
 
     .welcome-title { font-size: 3vw; }
     .welcome-subtitle { font-size: 2.5vw }
