--- a/core/templates/core/snippets/pending_weblet_invoice.html
+++ b/core/templates/core/snippets/pending_weblet_invoice.html
@@ -2,7 +2,7 @@
 {% if pending_invoice %}
     <div class="alert alert-info pending-invoice">
         <div class="col-xs-12 col-sm-8 about">
-            {% blocktrans with amount=pending_invoice.amount|intcomma %}Your have a pending invoice of <strong>XAF {{ amount }}</strong>{% endblocktrans %}
+            {% blocktrans with amount=pending_invoice.amount|intcomma %}You have a pending invoice of <strong>XAF {{ amount }}</strong>{% endblocktrans %}
         </div>
         <div class="col-xs-12 col-sm-3 pull-right">
             <a href="https://ikwen.com/billing/invoices" class="btn btn-block btn-outline-white">{% trans "View" %}</a>
