--- a/core/templates/core/snippets/media_uploader_single.html
+++ b/core/templates/core/snippets/media_uploader_single.html
@@ -1,8 +1,8 @@
 {% load i18n humanize static auth_tokens %}
 
 <section class="photos" style="width: 100%">
-    <label class="required upload-title" style="float: left; width: 100%">{% blocktrans with media_field_name=media.field %}Upload {{ media_field_name }}{% endblocktrans %}</label>
-    <input type="hidden" name="{{ media.field }}" />
+    <label class="required upload-title" style="float: left; width: 100%">{% blocktrans with media_field_name=media.media.field.name %}Upload {{ media_field_name }}{% endblocktrans %}</label>
+    <input type="hidden" name="{{ media.media.field }}" />
     <div id="upload-container{{ media.counter }}" class="upload-container">
         {% if media.preview and media.preview == media.media %}
         <div class="image" style="background-image: url('{% if upload_to_ikwen %}{{ settings.IKWEN_MEDIA_URL }}{% else %}{% get_media_prefix %}{% endif %}{{ media.preview }}')">
@@ -22,10 +22,12 @@
         </div>
     </div>
     <p class="help clear">
-        {% if media.media.name and not read_only_img %}
+        {% if media.media.name and not media.media.field.read_only %}
         <i class="glyphicon glyphicon-trash delete-media delete-media{{ media.counter }}" title="{% trans "Delete media" %}"></i>
+        <span>{{ media.media.field.help_text }}</span>
+        {% else %}
+        <span>{{ media.media.field.help_text }}</span>
         {% endif %}
-        <span style="padding-left: 30px">{{ img_help_text }}</span>
     </p>
 </section>
 
