--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -50,6 +50,7 @@ body.show-directions {overflow: hidden}
 .event-icon {line-height: 140px; text-align: center;position: absolute;width: 90px;}
 .event-icon img {width: 60px;}
 
+#payment-methods .spinner {background: rgba(255, 255, 255, .6); height: 100%; margin-left: -15px; position: absolute; top: 0; width: 100%}
 .payment-method {display: block;cursor: pointer;margin-bottom: 1em;}
 .payment-method .logo {display: block; text-align: center}
 .om-instructions {display: none; margin-top: 10px;}
