--- a/billing/templates/billing/configuration.html
+++ b/billing/templates/billing/configuration.html
@@ -1,4 +1,4 @@
-{% extends "core/app_base_admin.html" %}
+{% extends "core/change_object_base.html" %}
 {% load i18n humanize staticfiles auth_tokens admin_list %}
 
 {% block page_title %}
@@ -19,29 +19,21 @@
         <div class="container-fluid">
             <div id="stage" style="float: none; margin: auto">
                 <form id="configuration" class="admin-form pull-left" style="width: auto" method="post">{% csrf_token %}
-                    <input type="hidden" name="id" value="{{ config.id }}" />
-                    <input type="hidden" name="company_name_slug" value="{{ config.company_name_slug }}" />
                     {% include 'core/snippets/model_admin_form.html' %}
-                    <div class="form-group col-xs-12 col-sm-4 col-md-3" style="padding-top: 15px">
+                    {% for media_obj in media_field_list %}
+                    <div style="padding-left: 0; margin-right: 15px">
+                        <div>
+                        {% with media=media_obj %}
+                            {% include 'core/snippets/media_uploader_single.html' %}
+                        {% endwith %}
+                        </div>
+                    </div>
+                    {% endfor %}
+                    <div class="form-group col-xs-12 col-sm-4 col-md-3" style="clear: both; padding-top: 15px">
                         <button class="btn btn-sm btn-primary btn-block">{% trans "Save" %}</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-{% endblock %}
-
-{% block js %}
-    {{ block.super }}
-    <script src="{% static 'ikwen/ajaxuploader/js/fileuploader.js' %}"></script>
-    {% include 'core/snippets/banner_and_pp_uploader.html' %}
-    <script type="text/javascript">
-        (function() {
-            $('div#admin-nav .configuration').addClass('active');
-            $('.currencies-config').insertAfter('.website h3').show();
-            $('.form-row').addClass('form-group');
-            $('.form-row input:not([type=file], [type=checkbox]), .form-row select, .form-row textarea').addClass('form-control input-sm');
-            $('.form-row textarea').addClass('form-control input-sm');
-        })()
-    </script>
 {% endblock %}
